# ao3downloader

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  README.md  SECURITY.md  ao3downloader-container.sh  ao3downloader-mac-linux.sh  ao3downloader-windows.ps1  ao3downloader.cmd  ao3downloader.ps1  ao3downloader.py  publish.sh  pyproject.toml  readme_util.py  requirements.txt  settings.ini  template.html
.github/: FUNDING.yml
.github/workflows/: publish.yml  readme.yml  readme_util.yml  site.yml  tag.yml  test-publish.yml  test-tag.yml  test.yml  validate-fixtures.yml
ao3downloader/: ao3.py  exceptions.py  fileio.py  main.py  parse_pdf.py  parse_soup.py  parse_text.py  parse_xml.py  pinboard.py  repo.py  soup.py  strings.py  update.py
ao3downloader/actions/: __init__.py  ao3download.py  enterlinks.py  getlinks.py  globals.py  ignorelist.py  logvisualization.py  markedforlater.py  pinboarddownload.py  pinboardget.py  redownload.py  shared.py  updateepubs.py  updatefics.py  updateseries.py
ao3downloader/html/: template.html
ao3downloader/settings/: settings.ini
dev/: archive_old_fixtures.py  publish.sh  readme.py  refresh_fixtures.py
html/: template.html
site/: .prettierrc  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
test/: conftest.py  test_ao3.py  test_fileio.py  test_getlinks.py  test_parse_pdf.py  test_parse_soup.py  test_parse_text.py  test_parse_xml.py  test_repo.py  test_shared.py  test_update.py
test/__snapshots__/: test_parse_soup.ambr  test_update.ambr
test/fixtures/: bookmarks.html  deletedWork.html  (+15 more)
(+27 files in other folders)
